# seed

./: .gitignore  .tags  404.html  AI_Scraping.md  BUILD.md  CHANGELOG.md  CNAME  COMMERCIAL_LICENSE.md  COMPLIANCE_TESTING.md  CONTAINER.md  CONTRIBUTING.md  Dockerfile  ENTROPY_VALIDATION_ALPHA_QUICKREF.md  ENTROPY_VALIDATION_MU_README.md  FINAL_SUMMARY.md  FORMATS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_GOLDEN_RATIO.md  INSTALLATION.md  LICENSE  LICENSE_RESTRICTIONS.md  MANIFEST.in  Makefile  PACKAGING_SUMMARY.md  QUANTUM_SEED_TESTING.md  README.md  REFACTORING_SUMMARY.md  REPOSITORY_METADATA.md  RESTRUCTURING_GUIDE.md  SECURITY.md  STANDARDS_COMPLIANCE.md  TAGGING_QUICK_START.md  WATERMARK_IMPLEMENTATION_SUMMARY.md  build-js.js  csprng.py  golden_seed.hex  golden_seed_16.b64  golden_seed_16.csv  golden_seed_16.json  golden_seed_32.b64  (+36 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  act-history.json  pages.json  tags.txt
checksum/: README.md  __init__.py  verify_binary_representation.py  verify_large_seeds.py
data/: README.md
docs/: COMPLIANCE_TESTING.md  COMPRESSION_TESTING.md  DATA_TELEPORTATION_AND_COMPRESSION.md  DEPLOYMENT.md  DIEHARDER_TESTING.md  ENTROPY_ANALYSIS.md  ENTROPY_COMPARISON_MU_ROTATION.md  ENTROPY_TESTING.md  ENTROPY_TESTING_SUMMARY.md  ENTROPY_VALIDATION_ALPHA_README.md  ENTROPY_VALIDATION_ALPHA_RESULTS.md  ENTROPY_VALIDATION_MU_SUMMARY.md  ENTROPY_VALIDATION_TESTS.md  GITHUB_SETUP.md  GOLDEN_RATIO_COIN_FLIP_ANALYSIS.md  GOLDEN_RATIO_COIN_FLIP_README.md  IMPLEMENTATION_SUMMARY_GOLDEN_RATIO.md  NIST_TESTING.md  QUANTUM_SEED_PROOFS.md  REPOSITORY_METADATA.md  RUNTIME_VALIDATION.md  RUNTIME_VALIDATION_SUMMARY.md  WATERMARK_DOCUMENTATION.md
examples/: README.md  binary_fusion_tap.c  binary_fusion_tap.js  binary_fusion_tap.py  binary_fusion_tap.rs  binary_fusion_tap.ts  data_teleportation_demo.py  generate_demo_visualizations.py  nist_pqc_integration.md  procedural_dungeon_demo.py  procedural_generation.py  seed_distribution_demo.py  simple_seed_demo.py
formats/: README.md  __init__.py  test_checksums.json
oqs/: SECURITY_CHECKLIST.md  kyber_test.c
qkd/: README.md  __init__.py
results/: README.md
scripts/: README_ENTROPY_VALIDATION.md  README_WATERMARKING.md  compare_entropy_tests.py  create_watermarked_binary.py  dieharder_data_generator.py  dieharder_test.py  display_nist_results.py  display_validation_summary.py  generate_entropy_report.py  generate_nist_binary.py  language_compiler.py  nist_sp800_90b_data_generator.py  run_compliance_tests.py  run_nist_tests.py  runtime_validation.py  setup_nist_sts.sh  verify_watermark.py
tests/: README.md  README_MU_ROTATION.md  STL_DOCUMENTATION.md  generate_quantum_test_vectors.py  nist_pqc_test_vectors.json  quantum_seed_test_vectors_sample.json  (+22 more)
(+84 files in other folders)
